--- a/index.html
+++ b/index.html
@@ -1,18 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="./styles/main.css"/>
+<link rel="stylesheet" href="./styles/main.css"/>
 </head>
 <body>
     <h1>Martin's Aquarium</h1>
     <div id="app">
         <div class="left">
-            <article class="fishes">
-            This is my left
-                <section>
-
-                </section>
-            </article>
+            <h2 class="fishes__header">Martin's Fish</h2>
         </div>
         <aside class="right">This is my right</aside>
     </div>
